sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:15: error: ')' expected but ',' found.
    if(f -i+1,f -i)){
             ^AlgCocktailSort2:19: error: illegal start of simple expression
       }
       ^